--- a/TI 1.1/WS_CONUNI_SOAPJAVA_G04/01 SERVIDOR/WS_ConUni_SOAPJAVA_GR04/pom.xml
+++ b/TI 1.1/WS_CONUNI_SOAPJAVA_G04/01 SERVIDOR/WS_ConUni_SOAPJAVA_GR04/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mycompany</groupId>
-    <artifactId>WS_ConUni_SOAPJAVA_GR04</artifactId>
+    <groupId>ec.edu.monster</groupId>
+    <artifactId>WS_CONUNI_SOAPJAVA_GR04</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>WS_ConUni_SOAPJAVA_GR04-1.0-SNAPSHOT</name>
+    <name>WS_CONUNI_SOAPJAVA_GR04-1.0-SNAPSHOT</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
